# Kohaku-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  KOHAKU_SYNC.md  Kohaku-info  LICENSE  README.md
crates/kohaku-cli/: Cargo.toml
crates/kohaku-cli/src/: main.rs
crates/kohaku-core/: Cargo.toml
crates/kohaku-core/src/: error.rs  host.rs  lib.rs  plugin.rs  types.rs
crates/kohaku-p2p/: Cargo.toml
crates/kohaku-p2p/src/: lib.rs
crates/kohaku-railgun/: Cargo.toml
crates/kohaku-railgun/src/: lib.rs
crates/kohaku-stealth/: Cargo.toml
crates/kohaku-stealth/src/: lib.rs
scripts/: sync-upstream.sh
sync-reports/: 2026-06-30.md
