[workspace]
resolver = "2"
members = [
    "crates/kohaku-core",
    "crates/kohaku-stealth",
    "crates/kohaku-railgun",
    "crates/kohaku-p2p",
    "crates/kohaku-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/r4-ndm/Kohaku-rs"
homepage = "https://github.com/r4-ndm/Kohaku-rs"
authors = ["kohaku-rs contributors"]
keywords = ["ethereum", "privacy", "wallet", "kohaku", "railgun"]
categories = ["cryptography", "web-programming"]

[workspace.dependencies]
alloy-primitives = "1"
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1.44"

aes = "0.8"
aes-gcm = "0.10"
alloy = { version = "1.8", default-features = false }
alloy-sol-types = { version = "1.6", default-features = false }
anyhow = "1"
ark-bn254 = "0.6"
ark-circom = "0.6"
ark-ff = "0.6"
ark-groth16 = { version = "0.6", default-features = false }
ark-relations = "0.6"
ark-serialize = "0.6"
ark-std = { version = "0.6", features = ["getrandom"] }
bech32 = "0.11.1"
brotli = "8"
blake-hash = { version = "0.2.0", default-features = false }
cfg_aliases = "0.2.0"
console_error_panic_hook = "0.1"
criterion = "0.8.2"
ctr = "0.9.2"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.2.0"
futures = "0.3.31"
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
hex = "0.4.3"
http = "1.4.0"
insta = { version = "1.46.3", features = ["json"] }
itertools = "0.14.0"
js-sys = "0.3"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.12"
reqwest = { version = "0.13", default-features = false }
ruint = { version = "1", features = ["serde", "num-bigint", "ark-ff-06"] }
serde-wasm-bindgen = "0.6"
serde_with = "3.16.1"
serial_test = "3.3.1"
sha2 = "0.10.9"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.5"
tracing-wasm = "0.2"
tsify = "0.5"
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
wasmer = { version = "6.1", default-features = false }
web-time = { version = "1.1" }

common = { path = ".upstream-cache/kohaku/crates/common" }
crypto = { path = ".upstream-cache/kohaku/crates/crypto" }
eip-1193-provider = { path = ".upstream-cache/kohaku/crates/eip-1193-provider" }
poseidon-rust = { path = ".upstream-cache/kohaku/crates/poseidon-rust" }
railgun = { path = ".upstream-cache/kohaku/crates/railgun" }
userop-kit = { path = ".upstream-cache/kohaku/crates/userop-kit" }
userop-kit-ts = { path = ".upstream-cache/kohaku/crates/userop-kit-ts" }

kohaku-core = { path = "crates/kohaku-core", version = "0.0.0" }
kohaku-stealth = { path = "crates/kohaku-stealth", version = "0.0.0" }
kohaku-railgun = { path = "crates/kohaku-railgun", version = "0.0.0" }
kohaku-p2p = { path = "crates/kohaku-p2p", version = "0.0.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[patch.crates-io]
ruint = { git = "https://github.com/Robert-MacWha/ruint" }                                        # Adds ark-fr-06 support
ark-circom = { git = "https://github.com/Robert-MacWha/circom-compat", branch = "release/0.6.0" } # Adds opt-in parallel feature flag.  Without parallel hangs indefinitely in wasm.

[patch."https://github.com/r4-ndm/kohaku.git"]
railgun = { path = ".upstream-cache/kohaku/crates/railgun" }
common = { path = ".upstream-cache/kohaku/crates/common" }
crypto = { path = ".upstream-cache/kohaku/crates/crypto" }
eip-1193-provider = { path = ".upstream-cache/kohaku/crates/eip-1193-provider" }
userop-kit = { path = ".upstream-cache/kohaku/crates/userop-kit" }



