[package]
name = "kohaku-railgun"
description = "Desktop-native Railgun integration aligned with @kohaku-eth/railgun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["ethereum", "privacy", "railgun", "zk"]
categories.workspace = true

[dependencies]
kohaku-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# Track upstream EF Rust implementation (not yet published to crates.io).
# railgun = { git = "https://github.com/ethereum/kohaku", branch = "master" }
