[package]
name = "kohaku-railgun"
description = "Desktop-native Railgun integration aligned with @kohaku-eth/railgun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["ethereum", "privacy", "railgun", "zk"]
categories.workspace = true

[dependencies]
kohaku-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
alloy = { version = "1.8", default-features = false, features = ["json", "rpc"] }
hex = "0.4"
rand = { workspace = true }
tokio = { workspace = true }
eip-1193-provider = { git = "https://github.com/r4-ndm/kohaku.git", branch = "send-sync" }

# Track upstream EF Rust implementation (not yet published to crates.io).
railgun = { git = "https://github.com/r4-ndm/kohaku.git", branch = "send-sync" }
